--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "moment": "^2.30.1",
     "mongoose": "^8.5.2",
     "mongoose-unique-validator": "^5.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
