correction dans vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -10,9 +10,7 @@
     {
       "src": "/(.*)",
       "dest": "/server.js",
-      "methods": [
-        "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-      ],
+      "methods": ["GET", "OPTIONS", "PATCH", "DELETE", "POST", "PUT"],
       "headers": {
         "Access-Control-Allow-Origin": "*"
       }
