ajout de conteent type authorization dans le fichier vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -10,9 +10,10 @@
     {
       "src": "/(.*)",
       "dest": "/server.js",
-      "methods": ["GET", "OPTIONS", "PATCH", "DELETE", "POST", "PUT"],
+      "methods": ["GET","POST", "PUT", "DELETE", "OPTIONS", "PATCH" ],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers":"Content-Type, Authorization"
       }
     }
   ]
