--- a/vercel.json
+++ b/vercel.json
@@ -10,10 +10,9 @@
     {
       "src": "/(.*)",
       "dest": "/server.js",
-      "methods": ["GET","POST", "PUT", "DELETE", "OPTIONS", "PATCH" ],
+      "methods": ["GET", "OPTIONS", "PATCH", "DELETE", "POST", "PUT"],
       "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Headers":"Content-Type, Authorization"
+        "Access-Control-Allow-Origin": "*"
       }
     }
   ]
